[project]
name = "multimodal-timesfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "protobuf>=6.32.1",
    "pyyaml>=6.0.2",
    "safetensors>=0.6.2",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "timesfm[torch] @ git+https://github.com/google-research/timesfm.git",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250822",
    "types-tqdm>=4.67.0.20250809",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
strict = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = "timesfm.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
exclude = ["data/Time-MMD"]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle Error
    "W",  # pycodestyle Warning
    "F",  # Pyflakes
]
ignore = [
    "E501",  # line-too-long
]
